Adapt UI/tests to the raw FlowProperties passthrough API
The /config endpoint now returns flowProperties as-is (no Map
reshaping) and no longer bundles handlers; /dimensions and
/configuration were removed as redundant. Update the UI to fetch
/handlers separately and merge it client-side, and fix the API
controller tests to assert against the real FlowDimension/
FlowDimensionInstance types instead of the removed hand-built maps.